--- a/templates/src/assets/styles/_variables.scss
+++ b/templates/src/assets/styles/_variables.scss
@@ -6,7 +6,7 @@ $font-family: Inter, Helvetica, Arial, sans-serif;
 $line-height: 1.5;
 $font-weight-medium: 500;
 $font-weight-bold: 700;
-$font-weight-extra-bold: 700;
+$font-weight-extra-bold: 800;
 
 // Breakpoints
 $mq-breakpoints: (
@@ -36,9 +36,11 @@ $spacing-02: 0.25rem; // 4px
 $spacing-03: 0.5rem; // 8px
 $spacing-04: 1rem; // 16px
 $spacing-05: 1.5rem; // 24px
+$spacing-05-05: 1.75rem; // 28px
 $spacing-06: 2rem; // 32px
 $spacing-07: 2.5rem; // 40px
 $spacing-08: 4rem; // 64px
+$spacing-08-125: 4.125rem; // 66px
 $spacing-09: 5rem; // 80px
 $spacing-10: 10rem; // 160px
 
