--- a/templates/src/assets/styles/modules/_footer.scss
+++ b/templates/src/assets/styles/modules/_footer.scss
@@ -1,3 +1,69 @@
 .footer {
+	display: flex;
+	flex-wrap: wrap;
+	background-color: $color-dark;
+	min-height: 445px;
 
+	&__logo-container {
+		padding: 80px;
+		flex-basis: 50%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+
+		&__logo {
+			&__image {
+				height: 82px;
+			}
+		}
+	}
+
+	&__navigation {
+		padding: 80px 115px;
+		background-color: $color-primary;
+		flex-basis: 50%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+
+		&__links {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: repeat(4, auto);
+			gap: 25px;
+			list-style-type: none;
+			padding: 0;
+			margin: 0 $spacing-07 0 0;
+
+			&__item {
+				transition: $base_link_transition;
+	
+				.no-touch &:hover {
+					opacity: 0.5;
+				}
+			}
+		}
+
+		&__socials {
+			list-style-type: none;
+			gap: 65px;
+			display: flex;
+			justify-content: flex-start;
+			align-items:flex-end;
+			padding-left: 0;
+			margin-bottom: 0;
+
+			&__item {
+				a {
+					&:hover .footer__navigation__socials__item__image {
+						opacity: 0.5;
+					}
+				}
+			}
+
+			&__item__image {
+				transition: opacity 0.5s ease;
+			}
+		}
+	}
 }
