feat: fix bugs, add styles

--- a/templates/src/assets/styles/modules/_hero.scss
+++ b/templates/src/assets/styles/modules/_hero.scss
@@ -1,16 +1,6 @@
 .hero {
 	$block: &;
-
-	overflow: hidden;
-	background: linear-gradient(90deg, $color-light-grey 0%, $color-light-grey 50%, $color-light 50%, $color-light 100%);
-
-	@include mq(mobile) {
-		background: linear-gradient(90deg, $color-light-grey 0%, $color-light-grey 50%, $color-light-grey 50%, $color-light-grey 100%);
-	}
-
-	// @include mq(tablet) {
-	// 	background: linear-gradient(90deg, $color-light-grey 100%, $color-light-grey 50%, $color-light 50%, $color-light 100%);
-	// }
+	background: $color-light-grey;	
 
 	&__main {
 		position: relative;
@@ -20,7 +10,8 @@
 		display: flex;
 		align-items: center;
 		padding: 140px 0;
-		clip-path: polygon(100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+		clip-path: polygon(100% 0, 100% 88%, 50% 100%, 0 88%, 0 0);
+
 		@include mq(tablet) {
 			padding: 120px 0;
 		}
