--- a/templates/src/assets/styles/modules/_team.scss
+++ b/templates/src/assets/styles/modules/_team.scss
@@ -20,9 +20,9 @@
 		margin-bottom: $spacing-04;
 	}
 
-	&__button-group--filter-control{
+	&__button-group__filter-control{
 		align-self: flex-end;
-
+		
 		.button {
 			color: $color-text-light;
 			padding-left: 29px!important;
@@ -33,23 +33,31 @@
 		}
 	}
 
-	&__button-group--grid-control {
+	&__button-group__grid-control {
 		display: flex;
 		justify-content: flex-end;
 		margin-top: 15px;
 		margin-bottom: 30px;
-		padding-right: 15px;
+		padding-right: 10px;
 
 		.button {
-			padding: 10px!important;
+			padding: 15px!important;
 			color: $color-text-light;
 
 			&__label {
 				border: none;
 			}
 
-			&--active {
-				border-bottom: 2px solid $color-primary;
+			&--active::after {
+				content: '';
+				display: block;
+				width: 80%;
+				height: 1px;
+				background: $color-primary;
+				position: absolute;
+				bottom: 2px;
+				left: 50%;
+				transform: translateX(-50%);
 			}
 
 			@include mq($until: tablet-landscape) {
@@ -57,7 +65,6 @@
 			}
 
 			&--mobile {
-				color:red;
 				display: none;
 
 				@include mq($until: tablet-landscape) {
@@ -78,10 +85,17 @@
 				}
 			}
 		}
+
+		&--error {
+			grid-column: 1 / -1;
+			color: $color-text-primary;
+			text-align: center;
+		}
 	}
 
 	&__button-container {
-		display: flex;
-		justify-content: center;
+		font-weight: $font-weight-bold;
+
+		@include flex-center;
 	}
 }
