--- a/templates/src/assets/styles/components/_avatar.scss
+++ b/templates/src/assets/styles/components/_avatar.scss
@@ -1,6 +1,14 @@
 .avatar {
 	position: relative;
 
+	@include mq($until: tablet-landscape) {
+		display: flex;
+		flex-direction: column;
+		border-left: 0.5px solid $color-dark;
+		-webkit-filter: none;
+		filter: none;
+	}
+
 	&:hover &__info {
         z-index: 2;
 		opacity: 1;
@@ -10,6 +18,10 @@
 
     .last-element:hover &__info {
 		left: -100%;
+
+		@include mq($until: tablet-landscape) {
+			left: 0;
+		}
 	}
 
 	&:hover &__photo {
@@ -24,6 +36,11 @@
 		z-index: 1;
 		-webkit-filter: grayscale(100%);
 		filter: grayscale(100%);
+
+		@include mq($until: tablet-landscape) {
+			-webkit-filter: none;
+			filter: none;
+		}
 
 		&__image{
 			width: 100%;
@@ -45,6 +62,13 @@
 		flex-direction: column;
 		justify-content: flex-end;
 		padding: 25px;
+
+		@include mq($until: tablet-landscape) {
+			position: static;
+			opacity: 1;
+			background-color: $color-light;
+			justify-content: flex-start;
+		}
 
 		&__name {
 			color: $color-text-primary;
