--- a/templates/src/assets/styles/modules/_footer.scss
+++ b/templates/src/assets/styles/modules/_footer.scss
@@ -1,30 +1,56 @@
 .footer {
 	display: flex;
-	flex-wrap: wrap;
 	background-color: $color-dark;
 	min-height: 445px;
 
+	@include mq($until: tablet-landscape) {
+		flex-direction: column;
+	}
+
 	&__logo-container {
+		width: 50%;
 		padding: 80px;
-		flex-basis: 50%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		gap: 30px;
+
+		@include mq($until: tablet-landscape) {
+			width: 100%;
+		}
+
+		@include mq(page) {
+			align-items: flex-end;
+			padding-right: 350px;
+		}
 
 		&__logo {
 			&__image {
 				height: 82px;
+
+				@include mq($until: tablet-landscape) {
+					height: 60px;
+				}
+
+				@include mq($until: tablet) {
+					height: 40px;
+				}
 			}
 		}
 	}
 
 	&__navigation {
+		width: 50%;
 		padding: 80px 115px;
 		background-color: $color-primary;
-		flex-basis: 50%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+
+		@include mq($until: tablet-landscape) {
+			width: 100%;
+			padding: 80px 0 80px 80px;
+		}
 
 		&__links {
 			display: grid;
@@ -48,10 +74,17 @@
 			list-style-type: none;
 			gap: 65px;
 			display: flex;
+			flex-wrap: wrap;
 			justify-content: flex-start;
 			align-items:flex-end;
 			padding-left: 0;
 			margin-bottom: 0;
+
+			@include mq($until: tablet-landscape) {
+				width: 80%;
+				justify-content: center;
+				margin-top: 50px;
+			}
 
 			&__item {
 				a {
